--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,31 @@
         <h2>Pedido Nº :</h2>
         <h2>Mesa Nº :</h2>
     </div>
-    <div class="divMenu">
-        <h1>Desayuno        Almuerzo</h1>    
-
+    <div class="divMenu" >
+        <input type="button" value="Desayuno">
+        <input type="button" value="Almuerzo">
     </div>
+    <div class="divTable">
+        <table>
+    <tr>
+        <td><h5>Descripción</td> <td>Cantidad</h5></td>
+    </tr>
+    <tr>
+        <td>Café Americano</td><td>0</td><td><input type="button"><input type="button"></td>
+    </tr>
+    <tr>
+        <td>Café con leche</td><td>0</td><td><input type="button"><input type="button"></td>
+    </tr> 
+    <tr>
+        <td>Sandwich de Jamón y Queso</td><td>0</td><td><input type="button"><input type="button"></td>
+    </tr>  
+    <tr>
+        <td>Jugo Natural</td><td>0</td><td><input type="button"><input type="button"></td>
+    </tr> 
+    </div>
+</table>
     
+
+
 </body>
 </html>
