Creando componentes header.js,content.js,footer.js y css

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <div class="divTable">
         <table>
     <tr>
-        <td><h5>Descripción</td> <td>Cantidad</h5></td>
+        <td><h5>Descripción     Cantidad</h5></td>
     </tr>
     <tr>
         <td>Café Americano</td><td>0</td><td><input type="button"><input type="button"></td>
@@ -39,8 +39,9 @@
     <tr>
         <td>Jugo Natural</td><td>0</td><td><input type="button"><input type="button"></td>
     </tr> 
-    </div>
 </table>
+    </div>
+
     
 
 
