--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
     <div class="divForm">
         <h2>Crea tu Cuenta</h2>
         <form action="#">
-            <input type="text" placeholder="Udsuario" required>
+            <input type="text" placeholder="Usuario" required>
             <input type="password" placeholder="Contraseña" required>
             <input type="email" placeholder="Correo Electrónico" required>
             <input type="text" placeholder="Teléfono" required>
